--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <div class="top">
             <div class="black">
                 <p>Text Color Picker</p>
-                <input type="color" class="form-control" id="color-picker">
+                <input type="color" class="form-control" id="colorPicker">
             </div>
 
             <div class="black">
                 <p>Background Color</p>
-                <input type="color" class="form-control" id="background-picker">
+                <input type="color" class="form-control" id="canvasColor">
             </div>
 
             <div class="black">
                 <p>Font Size</p>
-                <select name="Text Size" id="font-size">
+                <select name="Text Size" id="fontSizePicker">
                     <option value="5">5px</option>
                     <option value="10">10px</option>
                     <option value="15">15px</option>
@@ -33,16 +33,15 @@
             </div>
         </div>
 
-        <canvas class="canvas" id="mycanvas" width="800" height="600"></canvas>
+        <canvas id="myCanvas" width="800" height="600" class="canvas"></canvas>
 
         <div class="bottom">
-            <button type="button" class="btn btn-danger" id="clear">Clear</button>
-            <button type="button" class="btn btn-success" id="save">Save</button>
-            <button type="button" class="btn btn-warning" id="retrive">Retrive Saved Signature</button>
+            <button type="button" class="btn btn-danger" id="clearButton">Clear</button>
+            <button type="button" class="btn btn-success" id="saveButton">Save</button>
+            <button type="button" class="btn btn-warning" id="retrieveButton">Retrieve Saved Signature</button>
         </div>
-        
+    </div>
 
     <script src="script.js"></script>
-
 </body>
 </html>
